--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  text-align: center;
+  font-family: Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+table {
+  margin: 20px auto;
+  border-collapse: collapse;
+  width: 80%;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 10px;
+  text-align: center;
+}
+
+th {
+  cursor: pointer;
+}
+
+.chat-window {
+  border: 1px solid black;
+  height: 300px;
+  width: 400px;
+  overflow-y: scroll;
+  margin: 20px auto;
+  padding: 10px;
+}
+
+.user-message {
+  text-align: right;
+  background-color: lightblue;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.bot-message {
+  text-align: left;
+  background-color: lightgreen;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 5px;
 }
