--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,11 @@ th {
   padding: 10px;
   border-radius: 5px;
 }
+.p{
+  text-align: center;
+  background-color: blue;
+  margin: 5px;
+  padding: 2px;
+  border-radius: 5px;
+}
+
